[tool.poetry]
name = "aiogram-test-server"
version = "0.1.0"
description = ""
authors = ["Alex <42418433+aiexz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aiogram_test_server"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
